added back button to individual contact. basic styling.

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <body ng-app="app">
     <div class="container" ui-view>
     </div>
+    <script src="https://use.fontawesome.com/51c226fa3a.js"></script>
     <script src="js/bundle.js"></script>
   </body>
 </html>
